--- a/packages/forms/src/styles/_input.scss
+++ b/packages/forms/src/styles/_input.scss
@@ -2,4 +2,5 @@
   padding: var(--basal-input-padding);
   border: var(--basal-input-border-size) var(--basal-input-border-style)
     var(--basal-input-border-color);
+  border-radius: var(--basal-input-radius);
 }
