--- a/packages/forms/src/styles/main.scss
+++ b/packages/forms/src/styles/main.scss
@@ -2,12 +2,14 @@ $input-padding: 10px 8px;
 $input-border-size: 1px;
 $input-border-style: solid;
 $input-border-color: #333333;
+$input-radius: 4px;
 
 :root {
   --basal-input-padding: #{$input-padding};
   --basal-input-border-size: #{$input-border-size};
   --basal-input-border-style: #{$input-border-style};
   --basal-input-border-color: #{$input-border-color};
+  --basal-input-radius: #{$input-radius};
 }
 
 @import "./input";
