--- a/packages/forms/src/styles/_fieldError.scss
+++ b/packages/forms/src/styles/_fieldError.scss
@@ -1,6 +1,6 @@
 [data-basal-field-error] {
   display: block;
-  color: var(--field-error-color);
-  font-size: var(--field-error-font-size);
-  margin-top: var(--field-error-margin-top);
+  color: var(--basal-field-error-color);
+  font-size: var(--basal-field-error-font-size);
+  margin-top: var(--basal-field-error-margin-top);
 }
