--- a/packages/forms/src/styles/_fieldset.scss
+++ b/packages/forms/src/styles/_fieldset.scss
@@ -5,5 +5,5 @@
     font-weight: var(--label-font-weight);
     margin-bottom: var(--label-margin-bottom);
   }
-  margin-bottom: 24px;
+  margin-bottom: var(--basal-fieldset-margin-bottom);
 }
