--- a/packages/forms/src/styles/_label.scss
+++ b/packages/forms/src/styles/_label.scss
@@ -1,6 +1,6 @@
 [data-basal-label] {
   display: block;
-  font-size: var(--label-font-size);
-  font-weight: var(--label-font-weight);
-  margin-bottom: var(--label-margin-bottom);
+  font-size: var(--basal-label-font-size);
+  font-weight: var(--basal-label-font-weight);
+  margin-bottom: var(--basal-label-margin-bottom);
 }
