--- a/packages/forms/src/styles/main.scss
+++ b/packages/forms/src/styles/main.scss
@@ -1,136 +1,3 @@
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-  display: block;
-}
-body {
-  line-height: 1;
-  font-family: Arial, Helvetica, sans-serif;
-}
-ol,
-ul {
-  list-style: none;
-}
-blockquote,
-q {
-  quotes: none;
-}
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-  content: "";
-  content: none;
-}
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-*,
-:after,
-:before {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
 $input-padding: 10px 8px;
 $input-border-size: 1px;
 $input-border-style: solid;
@@ -176,6 +43,9 @@ $field-error-margin-top: 4px;
 $field-description-font-size: 12px;
 $field-description-margin-top: 4px;
 
+$form-field-margin-bottom: 24px;
+$fieldset-margin-bottom: 24px;
+
 :root {
   --basal-input-padding: #{$input-padding};
   --basal-input-border-size: #{$input-border-size};
@@ -206,16 +76,19 @@ $field-description-margin-top: 4px;
   --basal-checkbox-label-margin-left: #{$checkbox-label-margin-left};
   --basal-checkbox-wrapper-margin-top: #{$checkbox-wrapper-margin-top};
   --basal-checkbox-wrapper-margin-bottom: #{$checkbox-wrapper-margin-bottom};
-  --label-font-size: #{$label-font-size};
-  --label-font-weight: #{$label-font-weight};
-  --label-margin-bottom: #{$label-margin-bottom};
-  --field-error-color: #{$field-error-color};
-  --field-error-font-size: #{$field-error-font-size};
-  --field-error-margin-top: #{$field-error-margin-top};
-  --field-description-font-size: #{$field-description-font-size};
-  --field-description-margin-top: #{$field-description-margin-top};
+  --basal-label-font-size: #{$label-font-size};
+  --basal-label-font-weight: #{$label-font-weight};
+  --basal-label-margin-bottom: #{$label-margin-bottom};
+  --basal-field-error-color: #{$field-error-color};
+  --basal-field-error-font-size: #{$field-error-font-size};
+  --basal-field-error-margin-top: #{$field-error-margin-top};
+  --basal-field-description-font-size: #{$field-description-font-size};
+  --basal-field-description-margin-top: #{$field-description-margin-top};
+  --basal-form-field-margin-bottom: #{$form-field-margin-bottom};
+  --basal-fieldset-margin-bottom: #{$fieldset-margin-bottom};
 }
 
+@import "./reset";
 @import "./input";
 @import "./textarea";
 @import "./select";
