moved around scss for better changes once imported

--- a/packages/forms/src/styles/main.scss
+++ b/packages/forms/src/styles/main.scss
@@ -1,101 +1,3 @@
-$input-padding: 10px 8px;
-$input-border-size: 1px;
-$input-border-style: solid;
-$input-border-color: #333333;
-$input-radius: 4px;
-$input-margin-bottom: 6px;
-$input-border-color-invalid: #e4002b;
-
-$radio-accent-color: #1e90ff;
-$radio-label-margin-left: 4px;
-$radio-wrapper-margin-top: 6px;
-$radio-wrapper-margin-bottom: 6px;
-
-$checkbox-accent-color: #1e90ff;
-$checkbox-label-margin-left: 4px;
-$checkbox-wrapper-margin-top: 6px;
-$checkbox-wrapper-margin-bottom: 6px;
-
-$textarea-padding: $input-padding;
-$textarea-border-size: $input-border-size;
-$textarea-border-style: $input-border-style;
-$textarea-border-color: $input-border-color;
-$textarea-radius: $input-radius;
-$textarea-margin-bottom: $input-margin-bottom;
-$textarea-border-color-invalid: $input-border-color-invalid;
-
-$select-padding: $input-padding;
-$select-border-size: $input-border-size;
-$select-border-style: $input-border-style;
-$select-border-color: $input-border-color;
-$select-radius: $input-radius;
-$select-margin-bottom: $input-margin-bottom;
-$select-border-color-invalid: $input-border-color-invalid;
-
-$label-font-size: 16px;
-$label-font-weight: 600;
-$label-margin-bottom: 4px;
-
-$field-error-color: #e4002b;
-$field-error-font-size: 12px;
-$field-error-margin-top: 4px;
-
-$field-description-font-size: 12px;
-$field-description-margin-top: 4px;
-
-$form-field-margin-bottom: 24px;
-$fieldset-margin-bottom: 24px;
-
-:root {
-  --basal-input-padding: #{$input-padding};
-  --basal-input-border-size: #{$input-border-size};
-  --basal-input-border-style: #{$input-border-style};
-  --basal-input-border-color: #{$input-border-color};
-  --basal-input-radius: #{$input-radius};
-  --basal-input-margin-bottom: #{$input-margin-bottom};
-  --basal-input-border-color-invalid: #{$input-border-color-invalid};
-  --basal-textarea-padding: #{$textarea-padding};
-  --basal-textarea-border-size: #{$textarea-border-size};
-  --basal-textarea-border-style: #{$textarea-border-style};
-  --basal-textarea-border-color: #{$textarea-border-color};
-  --basal-textarea-radius: #{$textarea-radius};
-  --basal-textarea-margin-bottom: #{$textarea-margin-bottom};
-  --basal-textarea-border-color-invalid: #{$textarea-border-color-invalid};
-  --basal-select-padding: #{$select-padding};
-  --basal-select-border-size: #{$select-border-size};
-  --basal-select-border-style: #{$select-border-style};
-  --basal-select-border-color: #{$select-border-color};
-  --basal-select-radius: #{$select-radius};
-  --basal-select-margin-bottom: #{$select-margin-bottom};
-  --basal-select-border-color-invalid: #{$select-border-color-invalid};
-  --basal-radio-accent-color: #{$radio-accent-color};
-  --basal-radio-label-margin-left: #{$radio-label-margin-left};
-  --basal-radio-wrapper-margin-top: #{$radio-wrapper-margin-top};
-  --basal-radio-wrapper-margin-bottom: #{$radio-wrapper-margin-bottom};
-  --basal-checkbox-accent-color: #{$checkbox-accent-color};
-  --basal-checkbox-label-margin-left: #{$checkbox-label-margin-left};
-  --basal-checkbox-wrapper-margin-top: #{$checkbox-wrapper-margin-top};
-  --basal-checkbox-wrapper-margin-bottom: #{$checkbox-wrapper-margin-bottom};
-  --basal-label-font-size: #{$label-font-size};
-  --basal-label-font-weight: #{$label-font-weight};
-  --basal-label-margin-bottom: #{$label-margin-bottom};
-  --basal-field-error-color: #{$field-error-color};
-  --basal-field-error-font-size: #{$field-error-font-size};
-  --basal-field-error-margin-top: #{$field-error-margin-top};
-  --basal-field-description-font-size: #{$field-description-font-size};
-  --basal-field-description-margin-top: #{$field-description-margin-top};
-  --basal-form-field-margin-bottom: #{$form-field-margin-bottom};
-  --basal-fieldset-margin-bottom: #{$fieldset-margin-bottom};
-}
-
-@import "./reset";
-@import "./input";
-@import "./textarea";
-@import "./select";
-@import "./label";
-@import "./fieldError";
-@import "./fieldDescription";
-@import "./radio";
-@import "./checkbox";
-@import "./fieldset";
-@import "./formField";
+@import "./variables";
+@import "./root";
+@import "./styles";
